# dfmd

./: Cargo.toml  LICENSE.MIT  README.md  org.freedesktop.FileManager1.service
src/: main.rs
